[metadata]
name = bonus-collections
version = 1.0.0
author = DigitalDetective47
author_email = ninji2701@gmail.com
description = More collection types written in pure Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DigitalDetective47/bonus-collections
project_urls =
    Bug Tracker = https://github.com/DigitalDetective47/bonus-collections/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: The Unlicense (Unlicense)
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.14
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.14

[options.packages.find]
where = src